--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,32 @@
 <div class="author">
-    <h1 class="author__heading">Hi, I am Kim.</h1>
-    <p class="author__body">Web developer and junior software engineer.</p>
-  </div>
-  
-  <img src="/img/hero-image.webp" alt="person looking out through window" class="hero-image" width="981" height="528">
-  
-  <section class="articles">
-    <h2 class="articles__heading">Latest Posts</h2>
-  
-    <ul class="article-ul">
-        <li>
-          <a href="#">
-            <span></span>
-            <span class="article-list__date"></span>
-          </a>
-        </li>
-    </ul>
-  
-    <a href="#" class="pagination">&lt; View Older Posts</a>
+  <h1 class="author__heading">Hi, I am Kim.</h1>
+  <p class="author__body">Web developer.</p>
+</div>
+
+<img src="/img/hero-image.webp" alt="person looking out through window" class="hero-image" width="981" height="528">
+
+<section class="articles">
+  <h2 class="articles__heading">Latest Posts</h2>
+
+  <ul class="article-ul">
+    <% data.forEach(post => { %>
+      <li>
+        <a href="/post/<%= post._id %>">
+          <span><%= post.title %></span>
+          <span class="article-list__date"><%= post.createdAt.toDateString() %></span>
+        </a>
+      </li>
+    <% }) %>
+  </ul>
+
+
+  <% if (nextPage !== null) { %>
+    <a href="/?page=<%= nextPage %>" class="pagination">&lt; View Older Posts</a>
+  <% } %>
+ 
 
   
-  </section>
+
+
+
+</section>
